2005-10-26  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, Makefile.in: Let installed custom PPDs get
	  gzipped by default.

2005-10-23  Till Kamppeter <till.kamppeter@gmx.net>

	* README, COPYING: Updated Copyright info.

	* printer/Epson-AcuLaser_C4100PS.xml,
	  printer/Epson-EPL-N2500PS.xml,
	  printer/HP-Business_Inkjet_2250.xml,
	  printer/HP-Business_Inkjet_2280.xml,
	  printer/HP-Business_Inkjet_2300.xml,
	  printer/HP-Business_Inkjet_2600.xml,
	  printer/HP-Business_Inkjet_2800.xml,
	  printer/HP-Business_Inkjet_3000.xml,
	  printer/HP-Color_LaserJet_2500.xml,
	  printer/HP-Color_LaserJet_2550.xml,
	  printer/HP-Color_LaserJet_2800.xml,
	  printer/HP-Color_LaserJet_3700.xml,
	  printer/HP-Color_LaserJet_4500.xml,
	  printer/HP-Color_LaserJet_4550.xml,
	  printer/HP-Color_LaserJet_4600.xml,
	  printer/HP-Color_LaserJet_4610.xml,
	  printer/HP-Color_LaserJet_4650.xml,
	  printer/HP-Color_LaserJet_4700.xml,
	  printer/HP-Color_LaserJet_4730_MFP.xml,
	  printer/HP-Color_LaserJet_5500.xml,
	  printer/HP-Color_LaserJet_5550.xml,
	  printer/HP-Color_LaserJet_5M.xml,
	  printer/HP-Color_LaserJet_8500.xml,
	  printer/HP-Color_LaserJet_8550GN.xml,
	  printer/HP-Color_LaserJet_9500_MFP.xml,
	  printer/HP-Color_LaserJet_9500.xml,
	  printer/HP-DesignJet_2500CP.xml,
	  printer/HP-DesignJet_3500CP.xml,
	  printer/HP-DesignJet_5500ps.xml, printer/HP-DesignJet_5500.xml,
	  printer/HP-LaserJet_1200.xml, printer/HP-LaserJet_1220.xml,
	  printer/HP-LaserJet_1300.xml, printer/HP-LaserJet_1320.xml,
	  printer/HP-LaserJet_2100M.xml, printer/HP-LaserJet_2100.xml,
	  printer/HP-LaserJet_2200.xml, printer/HP-LaserJet_2300.xml,
	  printer/HP-LaserJet_2410.xml, printer/HP-LaserJet_2420.xml,
	  printer/HP-LaserJet_2430.xml, printer/HP-LaserJet_3015.xml,
	  printer/HP-LaserJet_3020.xml, printer/HP-LaserJet_3030.xml,
	  printer/HP-LaserJet_3200m.xml, printer/HP-LaserJet_3200se.xml,
	  printer/HP-LaserJet_3200.xml, printer/HP-LaserJet_3300_MFP.xml,