@@ -13,7 +13,9 @@ AC_PROG_MAKE_SET
 
 SBINSEARCHPATH=/usr/sbin:/sbin:/usr/local/sbin:/etc/sbin
 BINSEARCHPATH=/usr/bin:/bin:/usr/local/bin
+DATASEARCHPATH=/usr/share:/usr/local/share:/usr/lib:/usr/local/lib:/opt
 BSB=$BINSEARCHPATH:$SBINSEARCHPATH
+AC_PATH_DIRS(CUPS_PPDS,cups/model,CUPS_PPDS_NOT_FOUND,$DATASEARCHPATH)
 AC_PATH_PROG(GZIP,gzip,GZIP_NOT_FOUND,$BSB)
 
 dnl disable PPD file compression
@@ -37,6 +39,28 @@ fi
 )
 AC_MSG_RESULT($GZIP_PPDS)
 AC_SUBST(GZIP_PPDS)
+
+dnl disable linking custom PPD files to CUPS PPDs (/usr/share/cups/model)
+AC_MSG_CHECKING(making PPD files available to CUPS)
+AC_ARG_ENABLE( ppds-to-cups,
+[  --disable-ppds-to-cups  disable making custom PPDs available to CUPS],
+[
+if test "$enableval" = "yes" ; then
+	PPDS_TO_CUPS=yes;
+else
+	PPDS_TO_CUPS=no;
+fi
+],
+[
+if test "$CUPS_PPDS" != "CUPS_PPDS_NOT_FOUND" ; then
+	PPDS_TO_CUPS=yes;
+else
+	PPDS_TO_CUPS=no;
+fi
+],
+)
+AC_MSG_RESULT($PPDS_TO_CUPS)
+AC_SUBST(PPDS_TO_CUPS)
 
 dnl AC_OUTPUT(Makefile src/Makefile)
 AC_OUTPUT(Makefile)
