@@ -1,7 +1,9 @@
 2005-10-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* configure.in, Makefile.in: Let installed custom PPDs get
-	  gzipped by default.
+	  gzipped by default. Let the PPDs also get linked into the
+	  /usr/share/cups/model repository if the user does not turn 
+	  this off.
 
 2005-10-23  Till Kamppeter <till.kamppeter@gmx.net>
 
